build/log/idf_py_stdout_output_429406
Command: ninja all
[1/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/Lab3_main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/Lab3_main.cpp.obj 
/home/pablo_kevin/.espressif/tools/xtensa-esp-elf/esp-15.1.0_20250607/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v6.0-dev-1002-gbfe5caf58f\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/pablo_kevin/Sistemas_Embebidos/Lab3_RTOS/build/config -I/home/pablo_kevin/esp/esp-idf/components/newlib/platform_include -I/home/pablo_kevin/esp/esp-idf/components/freertos/config/include -I/home/pablo_kevin/esp/esp-idf/components/freertos/config/include/freertos -I/home/pablo_kevin/esp/esp-idf/components/freertos/config/xtensa/include -I/home/pablo_kevin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/pablo_kevin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/pablo_kevin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/pablo_kevin/esp/esp-idf/components/freertos/esp_additions/include -I/home/pablo_kevin/esp/esp-idf/components/esp_hw_support/include -I/home/pablo_kevin/esp/esp-idf/components/esp_hw_support/include/soc -I/home/pablo_kevin/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/pablo_kevin/esp/esp-idf/components/esp_hw_support/dma/include -I/home/pablo_kevin/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/pablo_kevin/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/pablo_kevin/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/pablo_kevin/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/pablo_kevin/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/pablo_kevin/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/pablo_kevin/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/pablo_kevin/esp/esp-idf/components/heap/include -I/home/pablo_kevin/esp/esp-idf/components/heap/tlsf -I/home/pablo_kevin/esp/esp-idf/components/log/include -I/home/pablo_kevin/esp/esp-idf/components/soc/include -I/home/pablo_kevin/esp/esp-idf/components/soc/esp32 -I/home/pablo_kevin/esp/esp-idf/components/soc/esp32/include -I/home/pablo_kevin/esp/esp-idf/components/soc/esp32/register -I/home/pablo_kevin/esp/esp-idf/components/hal/platform_port/include -I/home/pablo_kevin/esp/esp-idf/components/hal/esp32/include -I/home/pablo_kevin/esp/esp-idf/components/hal/include -I/home/pablo_kevin/esp/esp-idf/components/esp_rom/include -I/home/pablo_kevin/esp/esp-idf/components/esp_rom/esp32/include -I/home/pablo_kevin/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/pablo_kevin/esp/esp-idf/components/esp_rom/esp32 -I/home/pablo_kevin/esp/esp-idf/components/esp_common/include -I/home/pablo_kevin/esp/esp-idf/components/esp_system/include -I/home/pablo_kevin/esp/esp-idf/components/esp_system/port/soc -I/home/pablo_kevin/esp/esp-idf/components/esp_system/port/include/private -I/home/pablo_kevin/esp/esp-idf/components/xtensa/esp32/include -I/home/pablo_kevin/esp/esp-idf/components/xtensa/include -I/home/pablo_kevin/esp/esp-idf/components/xtensa/deprecated_include -I/home/pablo_kevin/esp/esp-idf/components/driver/deprecated -I/home/pablo_kevin/esp/esp-idf/components/driver/i2c/include -I/home/pablo_kevin/esp/esp-idf/components/driver/touch_sensor/include -I/home/pablo_kevin/esp/esp-idf/components/driver/twai/include -I/home/pablo_kevin/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/pablo_kevin/esp/esp-idf/components/esp_pm/include -I/home/pablo_kevin/esp/esp-idf/components/esp_ringbuf/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_gpio/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_pcnt/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_gptimer/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_spi/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_i2s/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_sdmmc/legacy/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_sd_intf/include -I/home/pablo_kevin/esp/esp-idf/components/sdmmc/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_sdspi/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_sdio/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_dac/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_rmt/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_tsens/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_sdm/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_i2c/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_uart/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_ledc/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_parlio/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/pablo_kevin/esp/esp-idf/components/esp_driver_twai/include -I/home/pablo_kevin/esp/esp-idf/components/esp_adc/include -I/home/pablo_kevin/esp/esp-idf/components/esp_adc/interface -I/home/pablo_kevin/esp/esp-idf/components/esp_adc/esp32/include -mlongcalls -Wno-frame-address -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/pablo_kevin/Sistemas_Embebidos/Lab3_RTOS=. -fmacro-prefix-map=/home/pablo_kevin/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/Lab3_main.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/Lab3_main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/Lab3_main.cpp.obj -c /home/pablo_kevin/Sistemas_Embebidos/Lab3_RTOS/main/Lab3_main.cpp
/home/pablo_kevin/Sistemas_Embebidos/Lab3_RTOS/main/Lab3_main.cpp: In function 'void app_main()':
/home/pablo_kevin/Sistemas_Embebidos/Lab3_RTOS/main/Lab3_main.cpp:142:5: warning: missing initializer for member 'adc_oneshot_unit_init_cfg_t::clk_src' [-Wmissing-field-initializers]
  142 |     };
      |     ^
/home/pablo_kevin/Sistemas_Embebidos/Lab3_RTOS/main/Lab3_main.cpp:148:5: warning: missing initializer for member 'adc_oneshot_chan_cfg_t::atten' [-Wmissing-field-initializers]
  148 |     };
      |     ^
/home/pablo_kevin/Sistemas_Embebidos/Lab3_RTOS/main/Lab3_main.cpp:148:5: error: designator order for field 'adc_oneshot_chan_cfg_t::atten' does not match declaration order in 'adc_oneshot_chan_cfg_t'
[2/10] Performing build step for 'bootloader'
[1/1] cd /home/pablo_kevin/Sistemas_Embebidos/Lab3_RTOS/build/bootloader/esp-idf/esptool_py && /home/pablo_kevin/.espressif/python_env/idf6.0_py3.12_env/bin/python /home/pablo_kevin/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/pablo_kevin/Sistemas_Embebidos/Lab3_RTOS/build/bootloader/bootloader.bin
Bootloader binary size 0x66a0 bytes. 0x960 bytes (8%) free.
ninja: build stopped: subcommand failed.
